--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                     <div class="timer-bar-container" style="display: none;">
                         <div id="timer-bar"></div>
                     </div>
-                </div>
+                    <button id="pause-resume-button" class="apple-button apple-button-control text-sm mt-2" style="display: none;">一時停止</button>
+                    </div>
                 <div id="navigation-area" class="flex flex-col sm:flex-row justify-between items-center gap-3 pt-2 border-t">
                     <button id="next-question-button" class="apple-button apple-button-primary w-full order-1 sm:order-3" style="display: none;">
                         次の問題へ
