--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div id="options-container"></div>
                     </div>
                 </div>
-                <div id="feedback-area"> {/* タイマーバーはこの要素内に追加 */}
+                <div id="feedback-area"> 
                     <p id="feedback-text"></p>
                     <p id="explanation-text"></p>
                     <div class="timer-bar-container" style="display: none;">
